chore: initial stack images

--- a/content/stack/2.figma.yml
+++ b/content/stack/2.figma.yml
@@ -2,6 +2,7 @@ title: Figma
 description: Figma is my design tool of choice.
 category: design
 website: https://www.figma.com/
+image: /stack/loom.webp
 tags:
   - Design
   - Prototyping
