--- a/content/stack/3.fig.yml
+++ b/content/stack/3.fig.yml
@@ -2,6 +2,7 @@ title: Fig
 description: Fig adds VSCode-style autocomplete to your existing terminal.
 category: tools
 website: https://fig.io/
+image: /stack/loom.webp
 tags:
   - Development
   - Terminal
