--- a/content/stack/4.loom.yml
+++ b/content/stack/4.loom.yml
@@ -2,6 +2,7 @@ title: Loom
 description: Who knew that screen recorders + a profile overlay could be so fun?
 category: video
 website: https://www.loom.com/
+image: /stack/loom.webp
 tags:
   - Video
   - Screen Share
