--- a/content/stack/5.planetscale.yml
+++ b/content/stack/5.planetscale.yml
@@ -2,5 +2,6 @@ title: PlanetScale
 description: A modern database that makes it possible to build this site.
 category: development
 website: https://planetscale.com/
+image: /stack/loom.webp
 tags:
   - Database
