--- a/content/stack/6.vercel.yml
+++ b/content/stack/6.vercel.yml
@@ -2,6 +2,7 @@ title: Vercel
 description: Everything I make on the internet usually lives on Vercel.
 category: development
 website: https://vercel.com/
+image: /stack/loom.webp
 tags:
   - Deployment
   - Hosting
