chore: stack curation

--- a/content/stack/2.figma.yml
+++ b/content/stack/2.figma.yml
@@ -1,8 +1,6 @@
 title: Figma
-description: Figma is my design tool of choice.
-category: design
 website: https://www.figma.com/
-image: /stack/loom.webp
+image: /stack/figma.png
 tags:
   - Design
   - Prototyping
