--- a/content/stack/4.loom.yml
+++ b/content/stack/4.loom.yml
@@ -1,8 +1,6 @@
 title: Loom
-description: Who knew that screen recorders + a profile overlay could be so fun?
-category: video
 website: https://www.loom.com/
-image: /stack/loom.webp
+image: /stack/loom.png
 tags:
   - Video
   - Screen Share
