--- a/content/stack/6.vercel.yml
+++ b/content/stack/6.vercel.yml
@@ -1,8 +1,6 @@
 title: Vercel
-description: Everything I make on the internet usually lives on Vercel.
-category: development
 website: https://vercel.com/
-image: /stack/loom.webp
+image: /stack/vercel.png
 tags:
   - Deployment
   - Hosting
