--- a/content/stack/8.netlify.yml
+++ b/content/stack/8.netlify.yml
@@ -1,8 +1,6 @@
 title: Netlify
-description: Everything I make on the internet usually lives on Netlify.
-category: development
 website: https://netlify.com/
-image: /stack/loom.webp
+image: /stack/netlify.png
 tags:
   - Deployment
   - Hosting
