--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.2.1",
-    "@nuxt/image-edge": "1.0.0-27719579.87dcdf2",
+    "@nuxt/image-edge": "1.0.0-27840416.dc1ed65",
     "@unocss/nuxt": "^0.45.30",
     "@vueuse/math": "^9.4.0",
-    "@vueuse/motion": "2.0.0-beta.22",
+    "@vueuse/motion": "2.0.0-beta.25",
     "@vueuse/nuxt": "^9.4.0",
-    "nuxt": "3.0.0-rc.13",
+    "nuxt": "^3.0.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
