--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt-themes/elements": "^0.2.4",
     "@nuxt/content": "^2.2.1",
     "@nuxt/image-edge": "1.0.0-27840416.dc1ed65",
+    "@types/lodash-es": "^4.17.6",
     "@unocss/nuxt": "^0.45.30",
     "@vueuse/math": "^9.4.0",
     "@vueuse/motion": "2.0.0-beta.25",
@@ -20,6 +22,9 @@
     "uuid": "^9.0.0"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.4"
+    "@headlessui/vue": "^1.7.4",
+    "@vueuse/integrations": "^9.9.0",
+    "fuse.js": "^6.6.2",
+    "lodash-es": "^4.17.21"
   }
 }
