--- a/package.json
+++ b/package.json
@@ -8,22 +8,35 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "dependencies": {
+    "@headlessui/vue": "^1.7.4",
+    "@nuxt-themes/tokens": "^1.5.2",
+    "@vueuse/integrations": "^9.9.0",
+    "fuse.js": "^6.6.2",
+    "lodash-es": "^4.17.21",
+    "pinceau": "^0.10.3"
+  },
   "devDependencies": {
-    "@nuxt/content": "^2.2.1",
+    "@nuxt/content": "^2.3.0",
     "@nuxt/image-edge": "1.0.0-27840416.dc1ed65",
     "@types/lodash-es": "^4.17.6",
     "@unocss/nuxt": "^0.45.30",
+    "@vueuse/core": "^9.10.0",
     "@vueuse/math": "^9.4.0",
     "@vueuse/motion": "2.0.0-beta.25",
     "@vueuse/nuxt": "^9.4.0",
     "nuxt": "^3.0.0",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.4",
     "uuid": "^9.0.0"
   },
-  "dependencies": {
-    "@headlessui/vue": "^1.7.4",
-    "@vueuse/integrations": "^9.9.0",
-    "fuse.js": "^6.6.2",
-    "lodash-es": "^4.17.21"
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "vue",
+        "postcss",
+        "postcss-*",
+        "@nuxt/kit"
+      ]
+    }
   }
 }
