--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxt/content": "^2.3.0",
     "@nuxt/image-edge": "1.0.0-27840416.dc1ed65",
     "@types/lodash-es": "^4.17.6",
+    "@types/uuid": "^9.0.0",
     "@unocss/nuxt": "^0.48.4",
     "@vue-macros/nuxt": "^0.2.14",
     "@vueuse/core": "^9.10.0",
