--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: pnpm
-    directory: '/'
+    directory: /
     schedule:
       interval: weekly
     open-pull-requests-limit: 1
