--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "private": true,
   "packageManager": "pnpm@7.9.0",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "build": "nuxi build",
+    "dev": "nuxi dev",
+    "generate": "nuxi generate",
+    "preview": "nuxi preview",
+    "postinstall": "nuxi prepare",
+    "lint": "eslint --cache .",
+    "lint:fix": "pnpm lint --fix"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.4",
@@ -17,6 +19,7 @@
     "pinceau": "^0.10.3"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.34.1",
     "@nuxt/content": "^2.3.0",
     "@nuxt/image-edge": "1.0.0-27840416.dc1ed65",
     "@types/lodash-es": "^4.17.6",
@@ -27,6 +30,7 @@
     "@vueuse/math": "^9.4.0",
     "@vueuse/motion": "2.0.0-beta.25",
     "@vueuse/nuxt": "^9.4.0",
+    "eslint": "^8.32.0",
     "nuxt": "^3.0.0",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0"
