--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vueuse/nuxt": "^9.4.0",
     "eslint": "^8.32.0",
     "nuxt": "^3.0.0",
+    "sitemap": "^7.1.1",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0"
   },
