--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.13",
-    "@nuxt-themes/tokens": "^1.9.1",
+    "@nuxt-themes/tokens": "^2.0.1",
+    "@nuxt/content": "^2.6.0",
+    "@nuxt/image": "1.0.0-rc.1",
+    "@nuxtjs/plausible": "^0.2.1",
+    "@unocss/nuxt": "^0.49.8",
     "@vueuse/integrations": "^9.13.0",
+    "@vueuse/math": "^9.13.0",
+    "@vueuse/motion": "^2.0.0",
+    "@vueuse/nuxt": "^9.13.0",
     "fuse.js": "^6.6.2",
     "lodash-es": "^4.17.21",
-    "pinceau": "^0.14.7"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config": "^0.34.2",
-    "@nuxt/content": "^2.6.0",
-    "@nuxt/image-edge": "1.0.0-27840416.dc1ed65",
-    "@types/lodash-es": "^4.17.7",
-    "@types/uuid": "^9.0.1",
-    "@unocss/nuxt": "^0.49.8",
-    "@vue-macros/nuxt": "^0.2.16",
-    "@vueuse/core": "^9.13.0",
-    "@vueuse/math": "^9.13.0",
-    "@vueuse/motion": "2.0.0-beta.25",
-    "@vueuse/nuxt": "^9.13.0",
-    "eslint": "^8.41.0",
     "nuxt": "^3.5.1",
     "remark-reading-time": "^2.0.1",
-    "sitemap": "^7.1.1",
-    "typescript": "^4.9.5",
+    "sitemap": "^7.1.1"
+  },
+  "devDependencies": {
+    "@nuxtjs/eslint-config": "12.0.0",
+    "@nuxtjs/eslint-config-typescript": "12.0.0",
+    "@nuxtjs/eslint-module": "4.1.0",
+    "@types/lodash-es": "^4.17.7",
+    "@types/uuid": "^9.0.1",
+    "eslint": "^8.41.0",
+    "typescript": "^5.1.6",
     "uuid": "^9.0.0"
   },
   "pnpm": {
