chore: remove pinceau

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,3 @@
 {
-  "extends": "./.nuxt/tsconfig.json",
-  "vueCompilerOptions": {
-    "plugins": ["pinceau/volar"]
-  }
+  "extends": "./.nuxt/tsconfig.json"
 }
