--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "name": "gaunt.me",
+  "version": "1.0.0",
   "private": true,
-  "packageManager": "pnpm@7.9.0",
+  "packageManager": "pnpm@8.6.12",
   "scripts": {
-    "build": "nuxi build",
     "dev": "nuxi dev",
+    "build": "nuxi build",
+    "start": "nuxi start",
     "generate": "nuxi generate",
     "preview": "nuxi preview",
     "postinstall": "nuxi prepare",
@@ -12,30 +15,37 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.13",
+    "@iconify-json/solar": "^1.1.1",
     "@nuxt-themes/tokens": "^2.0.1",
-    "@nuxt/content": "^2.6.0",
-    "@nuxt/image": "1.0.0-rc.1",
+    "@nuxt/content": "^2.7.2",
+    "@nuxt/image": "1.0.0-rc.2",
+    "@nuxtjs/color-mode": "3.3.0",
     "@nuxtjs/plausible": "^0.2.1",
-    "@unocss/nuxt": "^0.49.8",
+    "@unhead/vue": "^1.7.4",
+    "@unocss/nuxt": "^0.55.3",
     "@vueuse/integrations": "^9.13.0",
     "@vueuse/math": "^9.13.0",
     "@vueuse/motion": "^2.0.0",
     "@vueuse/nuxt": "^9.13.0",
     "fuse.js": "^6.6.2",
     "lodash-es": "^4.17.21",
-    "nuxt": "^3.5.1",
+    "nuxt": "3.7.3",
+    "pinceau": "^0.20.1",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
     "remark-reading-time": "^2.0.1",
     "sitemap": "^7.1.1"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "12.0.0",
-    "@nuxtjs/eslint-config-typescript": "12.0.0",
-    "@nuxtjs/eslint-module": "4.1.0",
+    "@nuxt/devtools": "0.8.0",
+    "@nuxt/eslint-config": "0.1.1",
     "@types/lodash-es": "^4.17.7",
     "@types/uuid": "^9.0.1",
-    "eslint": "^8.41.0",
+    "eslint": "8.48.0",
+    "eslint-plugin-nuxt": "4.0.0",
     "typescript": "^5.1.6",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "vitest": "0.33.0"
   },
   "pnpm": {
     "peerDependencyRules": {
